--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,7 +32,7 @@ body{
 h1{
     margin: 0;
     padding:20px 0 ;
-    color: azure;
+    color: green;
     text-shadow: 3px 3px 1px black;
     
 }
