--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,7 +25,7 @@ body{
     margin:0 auto ;
     background-color:yellow;
     padding: 0 20px 20px 20px;
-    border: 5px solid black ;
+    border: 5px solid green ;
 
 }
 
