--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,30 +17,39 @@ p,li{
 }
 
 html{
-    background-color: aquamarine;
+    background-color: rgb(155, 127, 255);
 }
 
 body{
     width: 600px;
     margin:0 auto ;
-    background-color:yellow;
+    background-color gree;
     padding: 0 20px 20px 20px;
-    border: 5px solid green ;
+    border: 5px solid black ;
 
 }
 
 h1{
     margin: 0;
     padding:20px 0 ;
-    color: green;
-    text-shadow: 3px 3px 1px black;
+    color: blue;
+    text-shadow: 3px 3px 1px blanchedalmond;
     
 }
 img{
     display: block;
     margin: 0 auto;
 }
+body{
+    background-image: url(imagenes/htmlimagen2.png) ;
+    background-size: cover;
 
+
+
+
+
+    
+}
 
 
 
